[package]
name = "lisp-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lisp-rs = "0.3.0"
jsonwebkey = { version = "0.3.5", features = ["generate"]} 
jsonwebtoken = "8.1.1"
openssl-sys = "0.9"
openssl = "0.10"
serde = "1.0"
serde_json = "1.0"
actix-web = "4"